--- a/twitter.html
+++ b/twitter.html
@@ -32,8 +32,9 @@ function twitterSearch(obj) {
     var user, bgcolor, tweet, postedAt, icon, userURL;
     //start the ul
     tDiv.innerHTML = " "
-    tDiv.innerHTML += "<div class='container'>"
+    tDiv.innerHTML += "<div class='container-fluid'>"
     for (i=0;i<obj.results.length;i++) {
+	j=i+1;
     	//Look at me use the JavaScript modulus operator to do even/odd rows.
       	if(i % 2) {
         	bgcolor="#efefef"
@@ -51,7 +52,7 @@ function twitterSearch(obj) {
         postedAt = obj.results[i].created_at;
 	    //and here I mash it all up into a fancy li
    		//tDiv.innerHTML +="<li style='background-color:"+bgcolor+"; background-image: url("+icon+")'><strong><a href='"+userURL+"'>"+user+"</a></strong>: "+tweet+" <span class='time'>("+postedAt+" GMT)</span> </li>";
-   		tDiv.innerHTML +="<div class='span4'><strong>"+i+". <a href='"+userURL+"'>"+user+"</a></strong>: "+tweet+" <span class='time'>("+postedAt+" GMT)</span> </div>";
+   		tDiv.innerHTML +="<div class='span4 well'><strong>"+j+". <a href='"+userURL+"'>"+user+"</a></strong>: "+tweet+" <span class='time'>("+postedAt+" GMT)</span> </div>";
 	}
     //and close the UL
     tDiv.innerHTML += "</div>";
@@ -71,9 +72,12 @@ CiteamPolska
 </script>	
 </head> 
 <body onload="onLoad()">
-<a href="index.html" class="btn"> INDEX</a>
+
 
 <div id="twitter"></div>
 <div id="test"></div>
+<div class="container-fliud" style="clear:left;">
+<a href="index.html" class="btn"> INDEX</a>
+</div>
 </body>
 </html>
